# QtFractal

./: .gitignore  CMakeLists.txt  Fractals.sln  README.md
Fractals/: BoxFilter.cpp  BoxFilterConfigurationDialog.cpp  BoxFilterConfigurationDialog.h  BoxFilterConfigurationDialog.ui  Buddhabrot.cpp  Buddhabrot.h  BuddhabrotConfigurationDialog.cpp  BuddhabrotConfigurationDialog.h  BuddhabrotJob.cpp  BuddhabrotJob.h  BuddhabrotState.cpp  CMakeLists.txt  ChooseFractalWidget.cpp  ChooseFractalWidget.h  ChooseFractalWidget.ui  Color.cpp  Color.h  Fractal.cpp  Fractal.h  FractalComputationListener.cpp  FractalJob.cpp  FractalJob.h  FractalWindow.cpp  FractalWindow.h  Fractals.qrc  Fractals.ui  Fractals.vcxproj  Fractals.vcxproj.filters  GaussianFilter.cpp  GaussianFilterConfigurationDialog.cpp  GaussianFilterConfigurationDialog.h  GeneralConfigurationDialog.cpp  GeneralConfigurationDialog.h  GuiState.cpp  GuiState.h  Image.cpp  Image.h  ImageUtils.cpp  ImageUtils.h  Job.h  (+77 more)
Fractals/FParser/: fparser.cc  fparser.hh  fpoptimizer.cc
Fractals/GeneratedFiles/: qrc_Fractals.cpp  ui_BoxFilterConfigurationDialog.h  ui_BuddhabrotConfigurationDialog.h  ui_ChooseFractalWidget.h  ui_Fractals.h  ui_GaussianFilterConfigurationDialog.h  ui_GeneralConfigurationDialog.h  ui_LyapunovConfigurationDialog.h  ui_LyapunovRandomRenderer.h  ui_LyapunovRandomRendererDialog.h  ui_MandelJuliaLayerConfigurationDialog.h  ui_MandelJuliaRandomRenderer2Dialog.h  ui_MandelJuliaRandomRendererDialog.h  ui_MandelJuliaSineRendererDialog.h  ui_MandelbrotConfigurationDialog.h  ui_MitchellNetravaliFilterConfigurationDialog.h  ui_ProgressDialog.h  ui_WidgetFractal.h
Fractals/cmake/: qtdeploy.cmake
Fractals/src/core/: BaseTypes.h  Camera.cpp  Camera.h  Color.h  Complex.cpp  Complex.h  FractalComputationListener.h  Image.cpp  Image.h  MathParser.cpp  Maths.h  OrthographicCamera.cpp  OrthographicCamera.h  Parameters.cpp  Parameters.h  ProgressNotifier.h  Rng.h  Transform.cpp  Transform.h  Types.h  main.cpp
Fractals/src/factory/: ObjectFactory.h  ObjectFactoryManager.h
Fractals/src/filter/: BoxFilter.cpp  GaussianFilter.cpp  MitchellNetravaliFilter.cpp  ReconstructionFilter.cpp  ReconstructionFilter.h
Fractals/src/fractal/: Buddhabrot.cpp  Buddhabrot.h  Clifford.cpp  Clifford.h  Fractal.cpp  Fractal.h  Fractal2.cpp  Fractal2.h  Julia.cpp  Julia.h  Lyapunov.cpp  Lyapunov.h  Mandelbrot.cpp  Mandelbrot.h  (+2 more)
(+74 files in other folders)
